--- a/src/components/SearchRoute/index.css
+++ b/src/components/SearchRoute/index.css
@@ -3,19 +3,25 @@
   background-size: cover;
   display: flex;
   flex-direction: column;
-
+  overflow-y: scroll;
   background-color: #131313;
-  min-height: 100vh;
+  min-height: 100%;
 }
 .search-responsive-div {
   border: 2px solid green;
-}
-.no-search-container {
-  border: 2px solid blue;
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
+}
+.no-search-container {
+  border: 1px solid yellow;
+  height: 100vh;
+  display: flex;
   justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
 }
 .no-search-description {
   color: #ffffff;
@@ -48,4 +54,13 @@
 .search-filter-li-item {
   border: 2px solid red;
   margin: 6px;
+}
+.search-fail-container {
+  border: 1px solid yellow;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
 }
