some code addedd

--- a/src/components/AccountRoute/index.css
+++ b/src/components/AccountRoute/index.css
@@ -8,7 +8,7 @@
 }
 .account-resp-div {
   border: 2px solid green;
-  width: 100vw;
+  width: 100%;
   background-color: #ffffff;
   padding: 30px;
   height: 76vh;
