--- a/src/components/HomePoster/index.css
+++ b/src/components/HomePoster/index.css
@@ -1,7 +1,7 @@
 .home-poster-container {
   background-size: cover;
   height: 80vh;
-  width: 100vw;
+  width: 100%;
 }
 .poster-div {
   display: flex;
